--- a/package.xml
+++ b/package.xml
@@ -71,6 +71,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>image_transport</exec_depend>
 
+  <test_depend>rosunit</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
